k8s/konfiguraciok/adatbazis-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: adatbazis-slave-service
  namespace: hausz
  labels:
    app: adatbazis-slave-service
    app.kubernetes.io/name: adatbazis-slave-service
spec:
  ports:
  - name: mysql-port
    port: 3306
  clusterIP: None
  selector:
    app: adatbazis-slave
---
apiVersion: v1
kind: Service
metadata:
  name: adatbazis-slave-loadbalancer
  namespace: hausz
spec:
  clusterIP: 10.43.1.4
  selector:
    app: adatbazis-slave
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adatbazis-slave-statefulset
  namespace: hausz
spec:
  selector:
    matchLabels:
      app: adatbazis-slave
      app.kubernetes.io/name: adatbazis-slave
  serviceName: adatbazis-slave-service
  replicas: 3
  template:
    metadata:
      labels:
        app: adatbazis-slave
        app.kubernetes.io/name: adatbazis-slave
    spec:
      containers:
      - name: adatbazis-slave
        image: 'hausz-adatbazis-slave:latest'
        imagePullPolicy: Never
        ports:
        - name: mysql-port
          containerPort: 3306
        volumeMounts:
        - name: adatok
          mountPath: /var/lib/mysql
        - name: konfigok
          mountPath: /etc/mysql/conf.d
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
      affinity:
      podAntiAffinity:
        preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - adatbazis-slave
              topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: adatok
    spec:
      accessModes:
       - ReadWriteMany
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: konfigok
    spec:
      accessModes:
       - ReadWriteMany
      resources:
        requests:
          storage: 1Gi
