k8s/konfiguraciok/adatbazis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adatbazis-deployment
  namespace: hausz
  labels:
    app: adatbazis
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: adatbazis
        octopusexport: OctopusExport
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
        - name: adatbazis-volume
          persistentVolumeClaim:
            claimName: adatbazis-pvc
        - name: adatbazis-replika-volume
          persistentVolumeClaim:
            claimName: adatbazis-replika-pvc
      containers:
        - name: adatbazis-container
          image: 'hausz_adatbazis:latest'
          imagePullPolicy: Never
          command:
            - mysqld
          volumeMounts:
            - name: adatbazis-volume
              mountPath: /var/lib/mysql
            - name: adatbazis-replika-volume
              mountPath: /var/lib/adatbazis-replika
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
              memory: "600Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: adatbazis-service
  namespace: hausz
spec:
  type: ClusterIP
  ports:
  - name: adatbazis-port
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: adatbazis
  clusterIP: "10.43.1.2"
  sessionAffinity: None
