k8s/konfiguraciok/ts-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamspeak-db-deployment
  namespace: hausz
  labels:
    app: ts-db
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ts-db
        octopusexport: OctopusExport
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
        - name: ts-db-volume
          persistentVolumeClaim:
            claimName: ts-db-pvc
      containers:
        - name: ts-db-container
          image: 'hausz_teamspeak_adatbazis'
          imagePullPolicy: Never
          command:
            - mysqld
          volumeMounts:
            - name: ts-db-volume
              mountPath: /var/lib/mysql
              subPath: ''
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
              memory: "600Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ts-db-service
  namespace: hausz
spec:
  type: ClusterIP
  ports:
  - name: ts-db-port
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: ts-db
  clusterIP: "10.43.1.1"
  sessionAffinity: None
