k8s/konfiguraciok/ts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamspeak-deployment
  namespace: hausz
  labels:
    app: ts
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ts
        octopusexport: OctopusExport
    spec:
      terminationGracePeriodSeconds: 5
      volumes:
        - name: ts-volume
          persistentVolumeClaim:
            claimName: ts-pvc
      containers:
        - name: ts-container
          image: 'teamspeak:latest'
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: ts-volume
              mountPath: /var/ts3server/files
              subPath: ''
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
          securityContext:
            privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: ts-service
  namespace: hausz
spec:
  selector:
    app: ts
  type: LoadBalancer
  loadBalancerIP: "192.168.0.63"
  ports:
  - name: ts-port
    port: 9987
    protocol: UDP
    targetPort: 9987
  - name: ts-file-port
    port: 30033
    protocol: TCP
    targetPort: 30033
---
apiVersion: v1
kind: Service
metadata:
  name: ts-belso-service
  namespace: hausz
spec:
  type: ClusterIP
  ports:
  - name: ts-telnet-port
    port: 10011
    protocol: TCP
    targetPort: 10011
  selector:
    app: ts
  clusterIP: "10.43.1.3"
  sessionAffinity: None
