k8s/konfiguraciok/vpn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-deployment
  namespace: hausz
  labels:
    app: vpn
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vpn
        octopusexport: OctopusExport
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
        - name: vpn-volume
          persistentVolumeClaim:
            claimName: vpn-pvc
      containers:
        - name: vpn-container
          image: 'hausz_vpn:latest'
          imagePullPolicy: Never
          volumeMounts:
            - name: vpn-volume
              mountPath: /etc/ipsec.d
              subPath: ''
          resources:
            requests:
              memory: 10Mi
              cpu: 50m
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
---
apiVersion: v1
kind: Service
metadata:
  name: vpn-service
  namespace: hausz
spec:
  selector:
    app: vpn
  type: LoadBalancer
  loadBalancerIP: "192.168.0.71"
  ports:
  - name: vpn-port-1
    port: 500
    protocol: UDP
    targetPort: 500
  - name: vpn-port-2
    port: 4500
    protocol: UDP
    targetPort: 4500
