k8s/konfiguraciok/code-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-deployment
  namespace: hausz
  labels:
    app: code-server
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: code-server
        octopusexport: OctopusExport
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
        - name: projektkonyvtar-volume
          persistentVolumeClaim:
            claimName: projektkonyvtar-pvc
        - name: adatbazis-volume
          persistentVolumeClaim:
            claimName: adatbazis-pvc
        - name: minecraft-server-volume
          persistentVolumeClaim:
            claimName: minecraft-server-pvc
        - name: navidrome-volume
          persistentVolumeClaim:
            claimName: navidrome-pvc
        - name: ts-db-volume
          persistentVolumeClaim:
            claimName: ts-db-pvc
        - name: ts-volume
          persistentVolumeClaim:
            claimName: ts-pvc
        - name: vaultwarden-volume
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
        - name: adatbazis-slave-0-volume
          persistentVolumeClaim:
            claimName: adatok-adatbazis-slave-statefulset-0
        - name: adatbazis-slave-1-volume
          persistentVolumeClaim:
            claimName: adatok-adatbazis-slave-statefulset-1
        - name: adatbazis-slave-2-volume
          persistentVolumeClaim:
            claimName: adatok-adatbazis-slave-statefulset-2
      containers:
        - name: code-server-container
          image: 'linuxserver/code-server:4.20.1'
          imagePullPolicy: Always
          volumeMounts:
            - name: projektkonyvtar-volume
              mountPath: /hausz
            - name: adatbazis-volume
              mountPath: /pvc-volumes/adatbazis-pvc
            - name: minecraft-server-volume
              mountPath: /pvc-volumes/minecraft-server-pvc
            - name: navidrome-volume
              mountPath: /pvc-volumes/navidrome-pvc
            - name: ts-db-volume
              mountPath: /pvc-volumes/ts-db-pvc
            - name: ts-volume
              mountPath: /pvc-volumes/ts-pvc
            - name: vaultwarden-volume
              mountPath: /pvc-volumes/vaultwarden-pvc
            - name: adatbazis-slave-0-volume
              mountPath: /pvc-volumes/adatbazis-slave-0-pvc
            - name: adatbazis-slave-1-volume
              mountPath: /pvc-volumes/adatbazis-slave-1-pvc
            - name: adatbazis-slave-2-volume
              mountPath: /pvc-volumes/adatbazis-slave-2-pvc
          resources:
            requests:
              memory: 900Mi
              cpu: 1000m
          securityContext:
            privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-service
  namespace: hausz
spec:
  selector:
    app: code-server
  type: LoadBalancer
  loadBalancerIP: "192.168.0.70"
  ports:
  - name: code-server-port
    port: 8443
    protocol: TCP
    targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: hausz
  labels:
    name: code-server-ingress
spec:
  rules:
  - host: "code-server.hausz.stream"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: code-server-service
            port: 
              number: 8443
