k8s/konfiguraciok/minecraft-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server-deployment
  namespace: hausz
  labels:
    app: minecraft-server
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minecraft-server
        octopusexport: OctopusExport
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
        - name: minecraft-server-volume
          persistentVolumeClaim:
            claimName: minecraft-server-pvc
      containers:
        - name: minecraft-server-container
          image: 'hausz-minecraft-server:latest'
          imagePullPolicy: Never
          volumeMounts:
            - name: minecraft-server-volume
              mountPath: /minecraft
              subPath: ''
          resources:
            requests:
              memory: 3Gi
              cpu: 2000m
          securityContext:
            privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-service
  namespace: hausz
spec:
  selector:
    app: minecraft-server
  type: LoadBalancer
  loadBalancerIP: "192.168.0.66"
  ports:
  - name: server-port
    port: 25565
    protocol: TCP
    targetPort: 25565
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-dynmap-service
  namespace: hausz
spec:
  selector:
    app: minecraft-server
  type: LoadBalancer
  loadBalancerIP: "192.168.0.68"
  ports:
  - name: dynmap-port
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-dynmap-ingress
  namespace: hausz
  labels:
    name: minecraft-dynmap-ingress
spec:
  rules:
  - host: "dynmap.kubernetes.hausz.stream"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minecraft-dynmap-service
            port: 
              number: 80
